<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp">

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:text="@string/country_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameLabel"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@id/nameLabel" />

    <TextView
        android:id="@+id/regionLabel"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameLabel"
        android:layout_marginTop="4dp"
        android:text="@string/country_region"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/regionLabel"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@id/regionLabel" />

    <TextView
        android:id="@+id/capitalLabel"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/regionLabel"
        android:layout_marginTop="4dp"
        android:text="@string/country_capital"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/capital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/capitalLabel"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@id/capitalLabel" />

    <TextView
        android:id="@+id/populationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/capitalLabel"
        android:layout_marginTop="4dp"
        android:text="@string/country_population"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/populationLabel"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@id/populationLabel" />

    <ImageView
        android:id="@+id/ivFlag"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp" />


</RelativeLayout>