<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    >

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/weather_date"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/dateLabel"
        android:layout_alignBaseline="@+id/dateLabel"
        android:layout_marginLeft="4dp"
        />

    <TextView
        android:id="@+id/tempLabel"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_below="@id/dateLabel"
        />
    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tempLabel"
        android:layout_alignBaseline="@id/tempLabel"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:id="@+id/pressureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_below="@id/tempLabel"/>
    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/pressureLabel"
        android:layout_alignBaseline="@id/pressureLabel"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:id="@+id/humidityLabel"
        android:layout_width="70dp"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_below="@id/pressureLabel"/>
    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/humidityLabel"
        android:layout_alignBaseline="@id/humidityLabel"
        android:layout_marginLeft="4dp"/>

    <ImageView
        android:id="@+id/ivWeather"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_sunny"
        android:layout_marginRight="16dp"
        android:layout_alignBaseline="@id/dateLabel"
        android:layout_alignParentRight="true"/>


</RelativeLayout>